--- a/src/inc-header.html
+++ b/src/inc-header.html
@@ -8,13 +8,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="format-detection" content="telephone=no" />
 
-  <title>Start-project</title>
+  <title>Подтверждение возраста</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<div class="preloader">
+  <div class="preloader__image">
+    <img src="./images/logo_full.png" alt="alt">
+  </div>
+
+  <div class="linear-loader">
+    <div></div>
+    <div></div>
+  </div>
+</div>
 <!-- wrapper -->
 <div class="wrapper" id="wrapper">
   <header class="header" id="header">
-    <h1>header</h1>
+    <div class="header-logo">
+      <a href="#">
+        <img src="./images/logo_full.png" alt="alt">
+      </a>
+    </div>
   </header>
