--- a/src/inc-footer.html
+++ b/src/inc-footer.html
@@ -4,7 +4,7 @@
 
 </div>
 <!-- end-wrapper -->
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="./js/main.js"></script>
 </body>
 
