--- a/src/inc-header.html
+++ b/src/inc-header.html
@@ -19,14 +19,12 @@
 <body>
 <div class="preloader">
   <div class="preloader__image">
-    <img src="./images/logo_full.png" alt="alt">
+    <img src="./images/logo_full.png" id="preloader-img" alt="alt">
   </div>
 
-  <div class="linear-loader">
-    <div></div>
-    <div></div>
-  </div>
+  <div class="progressbar"></div>
 </div>
+
 <!-- wrapper -->
 <div class="wrapper" id="wrapper">
   <header class="header" id="header">
